[package]
name = "atm0s-small-p2p"
version = "0.2.0"
edition = "2021"
description = "A lightweight peer-to-peer network utilizing the atm0s routing mechanism, built entirely with async programming and QUIC (using the quinn library)."
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["io-util", "sync", "macros"] }
anyhow = { version = "1" }
quinn = { version = "0.11", features = ["ring", "runtime-tokio", "futures-io"] }
rustls = { version = "0.23", features = ["ring", "std"] }
log = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
derive_more = { version = "1.0", features = ["from", "into", "display", "deref"] }
parking_lot = { version = "0.12" }
rand = { version = "0.8" }
futures = { version = "0.3" }
bincode = { version = "1.3" }
blake3 = { version = "1.3" }
tokio-util = { version = "0.7", features = ["codec"] }
lru = { version = "0.12" }
thiserror = { version = "2.0" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
test-log = { version = "0.2" }
clap = { version = "4.4", features = ["derive", "env", "color"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "std"] }
